--- a/features.html
+++ b/features.html
@@ -17,6 +17,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <h1>Hellow world</h1>
       <div class="container">
         <a class="navbar-brand p-0" href="index.html">
           <img src="BigShops (1).png" alt="Logo" width="140" />
